<resources>
    <string name="app_name">macroline</string>

    <string name="accessibility_service_label">macroline service</string>
    <string name="accessibility_service_description">description</string>

    <string name="back">Назад</string>
    <string name="selectMacros">Выберите макрос</string>
    <string name="macroses_not_found">Макросы не найдены</string>
    <string name="select_argument">Указание аргумента</string>
    <string name="enter_value">Ввод значения...</string>
    <string name="enter_custon_argument_hint">Введите текст...</string>
    <string name="use_context_value">Использовать введенное ранее значение</string>
    <string name="Next">Далее</string>
    <string name="title_activity_app">AppActivity</string>


    <string name="import_modules">Импортировать модули</string>
    <string name="import_modules_title">Импорт модулей</string>
    <string name="load_from_storage">Загрузить с устройства</string>
    <string name="load_from_website">Загрузить с сайта</string>
    <string name="load_module_path_field_hint">Введите путь к модулю на устройстве</string>
    <string name="import_selected_module">Импортировать выбранный модуль</string>
    <!-- Preference Titles -->
    <string name="actvation_header">Активация</string>
    <string name="sync_header">Sync</string>

    <!-- Activation Preferences -->
    <string name="activation_text_title">Текст активации</string>
    <string name="activation_text_description">При вводе данного текста Вам будет предложено выбрать макрос</string>
    <string name="consider_activation_text_register_title">Учитывать регистр текста активации</string>
    <string name="disable_activtion_when_last_greather"></string>

</resources>